--- a/rafting/css/css/style.css
+++ b/rafting/css/css/style.css
@@ -5,13 +5,10 @@ body{ background-color: rgb(252,252,246);
 font-size: 14px;
 }
 
-h1,h2,h3,h4,p {
-    color: rgb(0,0,0)
-    ;
-}
+
 
 header,footer {
-    background-color: rgb(	252	243	105);
+    background-color: rgb(252,243,105);
 display: grid;
 align-items: center;
 }
@@ -34,7 +31,7 @@ header,ul,footer{
 }
 
 a{
-    color: rgb(red, green, blue);
+    color: rgb(43,19,109);
 }
 
 .socialicons{
