--- a/week 7/css/style.css
+++ b/week 7/css/style.css
@@ -1,7 +1,8 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box; /* I add this */
+  max-width: 2000px;
 }
 
 body {
@@ -55,6 +56,8 @@ a {
 .copy {
   margin-top: 1rem;
 }
+
+/*here */
 nav ul {
   list-style: none;
   display: flex;
@@ -68,9 +71,10 @@ nav ul li a{
     text-decoration: none;
     padding: 1.2rem;
 }
-.riverpic {
-  margin: 10rem;
-  padding: 50rem;
+
+
+.logo{
+  margin-left: 20px;
 }
 
 
