--- a/week 7/css/style.css
+++ b/week 7/css/style.css
@@ -2,14 +2,13 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box; /* I add this */
-  max-width: 2000px;
+ 
 }
 
 body {
   background-color: rgb(252, 252, 246);
   font-size: 14px;
 }
-
 
 header,
 footer {
@@ -42,8 +41,8 @@ footer {
   max-width: 960px;
   margin: 0 auto;
 }
-header{
-    grid-template-columns: 150px 1fr 2fr;
+header {
+  grid-template-columns: 150px 1fr 2fr;
 }
 a {
   color: rgb(43, 19, 109);
@@ -63,19 +62,76 @@ nav ul {
   display: flex;
 }
 nav ul li {
-    flex:1 1 auto;
-
+  flex: 1 1 auto;
 }
-nav ul li a{
-    display: block;
-    text-decoration: none;
-    padding: 1.2rem;
+nav ul li a {
+  display: block;
+  text-decoration: none;
+  padding: 1.2rem;
 }
 
-
-.logo{
+.logo {
   margin-left: 20px;
 }
 
+.banner-contents {
+  position: relative;
+  width: 100%;
+}
+.hero {
+  width: 100%;
+}
 
+.banner-content2 {
+  position: absolute;
+  top: 300px;
+  margin-left: 100px;
+  border: 3px solid #000;
+}
 
+.area1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.adventure,
+.area1h1 {
+  grid-column: 1;
+  padding-top: 20px;
+}
+
+.area1picture {
+  grid-column: 2;
+}
+
+.area2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+h2 {
+  grid-column: 2;
+  padding-top: 20px;
+  grid-row: 1;
+}
+.content2 {
+  grid-column: 2;
+  grid-row: 1;
+  padding-top: 50px;
+}
+.area2picture {
+  grid-column: 1;
+  grid-row: 1;
+  padding-top: 20px;
+}
+
+.area3 {
+  text-align: center;
+}
+
+footer{
+   
+}
+.socialicons{
+  display: flex;
+flex: 2 2 auto ;
+}
