--- a/week 7/css/style.css
+++ b/week 7/css/style.css
@@ -128,10 +128,20 @@ h2 {
   text-align: center;
 }
 
-footer{
-   
-}
+
 .socialicons{
   display: flex;
 flex: 2 2 auto ;
+}
+
+
+.stats {
+	position: absolute;
+	top: 150px;
+left: 900px;
+	background: rgb(252, 252, 246);
+	border: 1px solid #000;
+	padding: 1rem;
+	box-shadow: 0 0 30px #333;
+	opacity: 0.9;
 }
