--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -46,14 +46,19 @@
   }
   a {
     color: rgb(43, 19, 109);
-  }
   
+  }
+ 
   .socialicons {
-    margin-left: 50rem;
+    display: flex;
+    flex: 1 1 auto;
+  justify-content: end;
+    grid-column: 2;
   }
   
   .copy {
     margin-top: 1rem;
+    grid-column: 1;
   }
   
   /*here */
@@ -74,24 +79,19 @@
     margin-left: 20px;
   }
   
-  .banner-contents {
+  .banner-content {
     position: relative;
     width: 100%;
   }
   .hero {
     width: 100%;
+    
   }
-  
-  .banner-content2 {
-    position: absolute;
-    top: 300px;
-    margin-left: 100px;
-    border: 3px solid #000;
-  }
-  
+ 
   .area1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
   }
   .adventure,
   .area1h1 {
@@ -101,11 +101,13 @@
   
   .area1picture {
     grid-column: 2;
+    grid-row: 1/3;
   }
   
   .area2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
   }
   
   h2 {
@@ -138,11 +140,17 @@
   .stats {
       position: absolute;
       top: 150px;
-  left: 900px;
+  right: 20px;
       background: rgb(252, 252, 246);
       border: 1px solid #000;
       padding: 1rem;
       box-shadow: 0 0 30px #333;
       opacity: 0.9;
+      text-align: center;
+  }
+
+  button{
+    padding: 1rem;
+    font-size: large;
   }
   
