--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -1,180 +1,208 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box; /* I add this */
-   
-  }
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box; /* I add this */
+}
+
+body {
+  background-color: rgb(252, 252, 246);
+  font-size: 14px;
+}
+
+header,
+footer {
+  background-color: rgb(252, 243, 105);
+  display: grid;
+  align-items: center;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Cabin", sans-serif;
+  font-size: 22px;
+  color: rgb(43, 19, 109);
+}
+
+p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+}
+
+header,
+ul,
+footer {
+  font-family: "Superior Title", Light;
+  font-size: 20px;
   
-  body {
-    background-color: rgb(252, 252, 246);
-    font-size: 14px;
-  }
-  
-  header,
-  footer {
-    background-color: rgb(252, 243, 105);
-    display: grid;
-    align-items: center;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4 {
-    font-family: "Cabin", sans-serif;
-    font-size: 22px;
-    color: rgb(43, 19, 109);
-  }
-  
-  p {
-    font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-  }
-  
-  header,
-  ul,
-  footer {
-    font-family: "Superior Title", Light;
-    font-size: 20px;
-  }
-  .page {
-    max-width: 960px;
-    margin: 0 auto;
-  }
-  header {
-    grid-template-columns: 150px 1fr 2fr;
-  }
-  a {
-    color: rgb(43, 19, 109);
-  
-  }
- 
-  .socialicons {
-    display: flex;
-    flex: 1 1 auto;
+}
+.page {
+  max-width: 960px;
+  margin: 0 auto;
+}
+header {
+  grid-template-columns: 150px 1fr 2fr;
+}
+a {
+  color: rgb(43, 19, 109);
+}
+
+.socialicons {
+  display: flex;
+  flex: 1 1 auto;
   justify-content: end;
-    grid-column: 2;
-  }
-  
-  .copy {
-    margin-top: 1rem;
-    grid-column: 1;
-  }
-  
-  /*here */
-  nav ul {
-    list-style: none;
-    display: flex;
-  }
-  nav ul li {
-    flex: 1 1 auto;
-  }
-  nav ul li a {
-    display: block;
-    text-decoration: none;
-    padding: 1.2rem;
-  }
-  
-  .logo {
-    margin-left: 20px;
-  }
-  
-  .banner-content {
-    position: relative;
-    width: 100%;
-  }
-  .hero {
-    width: 100%;
-    
-  }
+  grid-column: 2;
+  padding-right: 10px;
+  padding-top: 5px;
+}
+
+.copy {
+  margin-top: 1rem;
+  grid-column: 1;
+  padding-left: 10px;
+}
+
+/*here */
+nav ul {
+  list-style: none;
+  display: flex;
+}
+nav ul li {
+  flex: 1 1 auto;
+}
+nav ul li a {
+  display: block;
+  text-decoration: none;
+  padding: 1.2rem;
+}
+
+.logo {
+  margin-left: 20px;
+}
+
+.banner-content {
+  position: relative;
+  width: 100%;
+}
+.hero {
+  width: 100%;
+}
+
+.area1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+.adventure,
+.area1h1 {
+  grid-column: 1;
+  padding-top:20px;
+}
+
+.area1picture {
+  grid-column: 2;
+  grid-row: 1/3;
+}
+
+.area2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding-top: 30px;
+}
+
+.title2 {
+  grid-column: 2;
+  padding-top: 0px;
+
  
-  .area1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-  }
-  .adventure,
-  .area1h1 {
-    grid-column: 1;
-    padding-top: 20px;
-  }
-  
-  .area1picture {
-    grid-column: 2;
-    grid-row: 1/3;
-  }
-  
-  .area2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-  }
-  
-  h2 {
-    grid-column: 2;
-    padding-top: 20px;
-    grid-row: 1;
-  }
-  .content2 {
-    grid-column: 2;
-    grid-row: 1;
-    padding-top: 50px;
-  }
-  .area2picture {
-    grid-column: 1;
-    grid-row: 1;
-    padding-top: 20px;
-  }
-  
-  .area3 {
-    text-align: center;
-  }
-  
-  
-  .socialicons{
-    display: flex;
-  flex: 2 2 auto ;
-  }
-  
-  
-  .stats {
-      position: absolute;
-      top: 150px;
+}
+.content2 {
+  grid-column: 2;
+  grid-row: 1;
+  padding-top: 50px;
+}
+.area2picture {
+  grid-column: 1;
+  grid-row: 1;
+  padding-top: 20px;
+}
+
+.area3 {
+  text-align: center;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+.socialicons {
+  display: flex;
+  flex: 2 2 auto;
+  gap: 5px;
+}
+
+.stats {
+  position: absolute;
+  top: 150px;
   right: 20px;
-      background: rgb(252, 252, 246);
-      border: 1px solid #000;
-      padding: 1rem;
-      box-shadow: 0 0 30px #333;
-      opacity: 0.9;
-      text-align: center;
-  }
+  background: rgb(252, 252, 246);
+  border: 1px solid #000;
+  padding: 1rem;
+  box-shadow: 0 0 30px #333;
+  opacity: 0.9;
+  text-align: center;
+}
 
-  button{
-    padding: 1rem;
-    font-size: large;
-  }
+button {
+  padding: 1rem;
+  font-size: large;
+}
+
+.pics1strow {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-top: 40px;
+  grid-gap:10px;
+}
+
+.pics2ndstrow {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-top: 10px;
+  grid-gap: 0px;
+}
+
+.wwa {
+  text-align: center;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
 
 
+.all {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 60px;
+}
+.help,.talk, .phone, .whats{
+  padding-bottom: 20px;
+}
 
+.booking {
+  grid-column: 2;
+  text-align: center;
+}
 
+form {
+  border-style: solid;
+  margin: 40px;
+  padding: 30px;
+}
 
-  .pics1strow{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding-top: 40px;
-    
-   
-  }
+.thankyou{
+  display: grid;
+  text-align: center;
+  padding-bottom: 60px;
   
-  .pics2ndstrow{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    padding-top: 10px;
-  }
 
- .wwa{
-   text-align: center;
-   padding-top: 70px;
-   padding-bottom: 70px;
- }
+}
