--- a/rafting/css/style.css
+++ b/rafting/css/style.css
@@ -35,7 +35,6 @@ ul,
 footer {
   font-family: "Superior Title", Light;
   font-size: 20px;
-  
 }
 .page {
   max-width: 960px;
@@ -93,48 +92,55 @@ nav ul li a {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  padding-top: 30px;
 }
-.adventure,
+
 .area1h1 {
   grid-column: 1;
-  padding-top:20px;
+  grid-row: 1;
+}
+.adventure {
+  grid-column: 1;
+  grid-row: 2;
 }
 
 .area1picture {
   grid-column: 2;
-  grid-row: 1/3;
+  grid-row: 2;
+  padding-left: 50px;
 }
 
 .area2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  padding-top: 30px;
+  padding-top: 50px;
 }
 
 .title2 {
   grid-column: 2;
-  padding-top: 0px;
-
- 
+  grid-row: 1;
 }
 .content2 {
   grid-column: 2;
-  grid-row: 1;
-  padding-top: 50px;
+  grid-row: 2;
+ 
 }
 .area2picture {
   grid-column: 1;
-  grid-row: 1;
-  padding-top: 20px;
+  grid-row: 2;
+  
 }
 
 .area3 {
   text-align: center;
   padding-bottom: 30px;
-  padding-top: 30px;
+  padding-top: 60px;
 }
 
+.paragraph3{
+  padding-top: 30px;
+}
 .socialicons {
   display: flex;
   flex: 2 2 auto;
@@ -162,14 +168,14 @@ button {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding-top: 40px;
-  grid-gap:10px;
+  grid-gap: 10px;
 }
 
 .pics2ndstrow {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding-top: 10px;
-  grid-gap: 0px;
+  grid-gap: 10px;
 }
 
 .wwa {
@@ -178,13 +184,15 @@ button {
   padding-bottom: 70px;
 }
 
-
 .all {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 60px;
 }
-.help,.talk, .phone, .whats{
+.help,
+.talk,
+.phone,
+.whats {
   padding-bottom: 20px;
 }
 
@@ -199,10 +207,13 @@ form {
   padding: 30px;
 }
 
-.thankyou{
+.thankyou {
   display: grid;
   text-align: center;
   padding-bottom: 60px;
-  
+}
 
+.infowwa{ 
+  padding-top: 20px;
+  text-align:center;
 }
